# BHTreeFPGA

./: .clangd  .gitignore  LICENSE  README.md  gen_golden.py  launch_cursor_vitis.sh  nbody_golden.npz  prototype.py  scratch.ipynb  test_bhtree.py
hw/: .gitignore  Makefile  setup_vitis.sh
hw/bhtree/: .gitignore  commands.sh  hls_config.cfg  vitis-comp.json
hw/bhtree/bhtree/: vitis-comp.json
hw/config/treecon/: hls_config.cfg  vitis-comp.json
hw/config/treewalk/: hls_config.cfg
hw/host/: main.cpp
hw/include/: bhtree_config_hls.h  bhtree_types_hls.cpp  bhtree_types_hls.h  peano_hilbert.h  tree_config.h  tree_types.h  treecon.h  treewalk.h
hw/include/bhtree/: bhtree_config_hls.h
hw/include/common/: treecon_types_hls.h
hw/include/treecon/: treecon_config_hls.h
hw/scripts/: Makefile  build_all.sh  build_bhtree.sh  compile_host.sh  run_fpga.sh
hw/src/: bhtree_hls.cpp
hw/src/bhtree/: bhtree_hls.cpp
hw/src/treecon/: treecon.cpp
hw/src/treewalk/: treewalk.cpp  treewalk_claude.cpp
hw/tb/: test_bhtree_hls.cpp
hw/tb/bhtree/: test_bhtree_hls.cpp
hw/tb/common/: test_peano_hilbert.h  test_util.h  tree_gen.h  tree_io.h
hw/tb/treecon/: test_treecon.cpp
hw/tb/treewalk/: direct_sum.h  test_treewalk.cpp
hw/testbench/: Makefile  test_bhtree_manual.cpp
proto/: scratch.ipynb  test_bhtree.py
proto/pyW2/: Wlist.csv  plot_Wlist.py
sw/: CMakeLists.txt
sw/include/: bhtree_config.h  bhtree_types.h  peano_hilbert.h  pointcloud.h
sw/src/: bhtree.cpp  peano_hilbert.cpp  pointcloud.cpp
sw/tests/: test_peano_hilbert.cpp
